--- a/cv.html
+++ b/cv.html
@@ -516,9 +516,9 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a><span style="float:right;"><a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Video</a></span></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19 pandemic)<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span></div>
-           <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Video</a></span></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19 pandemic)</div>
          </div>
 
          <br/><div class="cv">
@@ -546,23 +546,23 @@
    </div>
 
 <br/><div class="cv">
-<div class="year"></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Video</a></span></h4></div>
- <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20191007.html">What is the probabilistic analysis of a condition number?</a></div>
+<div class="year"></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
+ <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20191007.html">What is the probabilistic analysis of a condition number?</a><span style="float:right;"><a href="https://vimeo.com/369919190">Video</a></span></div>
 </div>
 
 <br/><div class="cv">
-<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#felipefest">Complexity of Numerical Computation: A conference in honor of Felipe Cucker</a><span style="float:right;"><a href="pdf/felipefest2019_slides.pdf">Slides</a></span></h4></div>
-  <div class="pretalktitle"></div><div class="talktitle">Average minus Weak Complexity equals Adaptive algorithms</div>
+<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#felipefest">Complexity of Numerical Computation: A conference in honor of Felipe Cucker</a></h4></div>
+  <div class="pretalktitle"></div><div class="talktitle">Average minus Weak Complexity equals Adaptive algorithms<span style="float:right;"><a href="pdf/felipefest2019_slides.pdf">Slides</a></span></div>
 </div>
 
 <br/><div class="cv">
-<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC'19)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Slides</a></span></h4></div>
-  <div class="pretalktitle"></div><div class="talktitle">Plantinga-Vegter algorithm takes average polynomial time</div>
+<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC'19)</a></h4></div>
+  <div class="pretalktitle"></div><div class="talktitle">Plantinga-Vegter algorithm takes average polynomial time<span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Slides</a></span></div>
 </div>
 
    <br/><div class="cv">
-   <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2019Symposium">Minisymposium <em>Numerical methods for structured polynomial system solving</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a><span style="float:right;"><a href="pdf/SIAMAG19_slides.pdf">Slides</a></span></h4></div>
-     <div class="pretalktitle"></div><div class="talktitle">Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry</div>
+   <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2019Symposium">Minisymposium <em>Numerical methods for structured polynomial system solving</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a></h4></div>
+     <div class="pretalktitle"></div><div class="talktitle">Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry<span style="float:right;"><a href="pdf/SIAMAG19_slides.pdf">Slides</a></span></div>
    </div>
 
      <br/><div class="cv">
@@ -589,13 +589,13 @@
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <br/><div class="cv">
-      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#1stBYMAT">1st BYMAT Conference</a><span style="float:right;"><a href="pdf/1stBYMAT_slides.pdf">Slides</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Computing the homology of closed semialgebraic sets</div>
+      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#1stBYMAT">1st BYMAT Conference</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Computing the homology of closed semialgebraic sets<span style="float:right;"><a href="pdf/1stBYMAT_slides.pdf">Slides</a></span></div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#6BMSStudConf">6th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/272577693">Video</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Approximation Theorem</div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#6BMSStudConf">6th BMS Student Conference</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Approximation Theorem<span style="float:right;"><a href="https://vimeo.com/272577693">Video</a></span></div>
       </div>
 
 <!-- 2017
@@ -612,8 +612,8 @@
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#5BMSStudConf">5th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/222339083">Video</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">The shadow of the hidden combinatorics of completely positive operators on Polynomial Identity Testing</div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#5BMSStudConf">5th BMS Student Conference</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">The shadow of the hidden combinatorics of completely positive operators on Polynomial Identity Testing<span style="float:right;"><a href="https://vimeo.com/222339083">Video</a></span></div>
       </div>
 
 
@@ -625,8 +625,8 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Seminar of the OURAGAN team of Inria Paris<span style="float:right;"><a href="pdf/OURAGAN30062020_slides.pdf">Slides</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
+      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Seminar of the OURAGAN team of Inria Paris</h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/OURAGAN30062020_slides.pdf">Slides</a></span></div>
         <div class="property">Institution:</div><div class="value"><a href="">Inria Paris</a></div>
         <div class="property">Location:</div><div class="value">Paris, France (On-line)</div>
         <div class="property">Date:</div><div class="value">30th of June of 2020</div>
@@ -675,34 +675,34 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2019">MEGA 2019: Effective Methods in Algebraic Geometry</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets3.pdf">Poster</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Closed Semialgebraics Sets in Weak Exponential Time</div>
+      <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2019">MEGA 2019: Effective Methods in Algebraic Geometry</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Closed Semialgebraics Sets in Weak Exponential Time<span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets3.pdf">Poster</a></span></div>
        <div class="property"></div><div class="value">(obtained one of the <a href="#MEGA2019award">Special Awards to Young Researchers presenting their Posters</a>)</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#gradmeeting2019">2nd Graduate Student Meeting on Applied Algebra and Combinatorics</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets2.pdf">Poster</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets in Weak Exponential Time</div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#gradmeeting2019">2nd Graduate Student Meeting on Applied Algebra and Combinatorics</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets in Weak Exponential Time<span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets2.pdf">Poster</a></span></div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#rsme2019">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2019</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets2.pdf">Poster</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets in Weak Exponential Time</div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#rsme2019">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2019</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets in Weak Exponential Time<span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets2.pdf">Poster</a></span></div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#numalg2018">Summer School on Numerical Computing in Algebraic Geometry</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets1.pdf">Poster</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets</div>
+      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#numalg2018">Summer School on Numerical Computing in Algebraic Geometry</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets<span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets1.pdf">Poster</a></span></div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#qmath2018">QMath Masterclass on &ldquo;Tensors: Geometry and Quantum Information&rdquo;</a><span style="float:right;"><a href="pdf/Poster_Polynomial_Identity_Testing_and_the_Combinatorics_of_Completely_Positive_Operators.pdf">Poster</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Polynomial Identity Testing and the Combinatorics of Completely Positive Operators</div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#qmath2018">QMath Masterclass on &ldquo;Tensors: Geometry and Quantum Information&rdquo;</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Polynomial Identity Testing and the Combinatorics of Completely Positive Operators<span style="float:right;"><a href="pdf/Poster_Polynomial_Identity_Testing_and_the_Combinatorics_of_Completely_Positive_Operators.pdf">Poster</a></span></div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#BES2">Symposium &ldquo;Bridging European Science II&rdquo;</a><span style="float:right;"><a href="pdf/Poster_Computing_the_shape_of_semialgebraic_sets.pdf">Poster</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle">Computing the &ldquo;Shape&rdquo; of Semialgebraic Sets</div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#BES2">Symposium &ldquo;Bridging European Science II&rdquo;</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Computing the &ldquo;Shape&rdquo; of Semialgebraic Sets<span style="float:right;"><a href="pdf/Poster_Computing_the_shape_of_semialgebraic_sets.pdf">Poster</a></span></div>
       </div>
 
 <!-- other
@@ -713,36 +713,36 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/305120572">Video</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20181207.html">What is the best voting system?</a></div>
+      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20181207.html">What is the best voting system?</a><span style="float:right;"><a href="https://vimeo.com/305120572">Video</a></span></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">7th of December of 2018</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/281268225">Video</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20180629.html">What are semialgebraic sets in context?</a></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20180629.html">What are semialgebraic sets in context?</a><span style="float:right;"><a href="https://vimeo.com/281268225">Video</a></span></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">29th of June of 2018</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2017</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/277075223">Video</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20170630.html">What are BPP, RP and the other probabilistic complexity classes?</a></div>
+      <div class="year"><h4>2017</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20170630.html">What are BPP, RP and the other probabilistic complexity classes?</a><span style="float:right;"><a href="https://vimeo.com/277075223">Video</a></span></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">30th of June of 2017</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/203591928">Video</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20170127.html">What is the length of a potato?</a></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20170127.html">What is the length of a potato?</a><span style="float:right;"><a href="https://vimeo.com/203591928">Video</a></span></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">27th of January of 2017</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2016</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/160594229">Video</a></span></h4></div>
-       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20160205.html">What is an Origami Constructible Number?</a></div>
+      <div class="year"><h4>2016</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20160205.html">What is an Origami Constructible Number?</a><span style="float:right;"><a href="https://vimeo.com/160594229">Video</a></span></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">5th of February of 2016</div>
       </div>
