--- a/cv.html
+++ b/cv.html
@@ -757,6 +757,21 @@
    <h2 class="display-4">Organized activities</h2>
    </div></div>
 
+   <!-- 2020
+   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+   <br/><div class="cv">
+   <div class="year">
+   <h4>2020</h4>
+   </div><div class="title">
+   <h4>&emsp;<a href="#3rdBYMAT">3rd BYMAT Conference</a></h4></div>
+   <div class="pretalktitle"></div><div class="talktitle">Member of the Scientific Committee</div>
+     <div class="property">Location:</div><div class="value">Valencia, Spain (On-line)</div>
+     <div class="property">Date:</div><div class="value">1st to 3rd of December of 2020</div>
+   </div>
+
+   <!-- 2019
+   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
    <span id="WhatIsSeminar"></span>
    <br/><div class="cv">
@@ -764,23 +779,19 @@
    <h4>2016-19</h4>
    </div><div class="title">
    <h4>&emsp;<a href="https://whatisseminar.xyz/">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
+   <div class="pretalktitle"></div><div class="talktitle">Co-organizer, web-designer and video management</div>
      <div class="property">Description:</div><div class="value">Student organised seminar where a new concept, idea or object is introduced in each session</div>
-     <div class="property">Role:</div><div class="value">Co-organizer, web-designer and video management</div>
      <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
-     <div class="property">Date:</div><div class="value">April of 2016 -to December of 2019</div>
+     <div class="property">Date:</div><div class="value">April of 2016 to December of 2019</div>
    </div>
 
-<!-- 2019
-YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="ncyprus2019"></span>
 <br/><div class="cv">
 <div class="year">
 <h4>2019</h4>
 </div><div class="title">
-<h4>&emsp;<a href="http://web0.boun.edu.tr/alp.bassa/RRAG/">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
-  <div class="property">Organizer:</div><div class="value">Alp Bassa, Turgay Bayraktar, Özgür Kişisel, Ferit Öztürk and Josué Tonelli-Cueto</div>
-  <div class="property">Hosting Institution:</div><div class="value"><a href="https://ncc.metu.edu.tr/">Middle East Technical University - Northern Cyprus Campus</a></div>
+<h4>&emsp;<a href="#ncyprus2019">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
+<div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
   <div class="property">Location:</div><div class="value">Güzelyurt, Northern Cyprus</div>
   <div class="property">Date:</div><div class="value">21st to 26th of October of 2019</div>
 </div>
@@ -792,9 +803,9 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <h4>&emsp;Minisymposium <em>Numerical methods for structured polynomial system solving</em></h4></div>
    <div class="year"></div><div class="title">
    <h4>&#160;&#160;at the <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a></h4></div>
+   <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
      <div class="property">Description:</div><div class="value">4 sessions and 15 talks</div>
      <div class="property">Organizer:</div><div class="value">Alperen A. Erg&uuml;r, Pierre Lairez, Gregorio Malajovich and Josu&eacute; Tonelli-Cueto</div>
-     <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.unibe.ch/">University of Bern</a></div>
      <div class="property">Location:</div><div class="value">Bern, Switzerland</div>
      <div class="property">Date:</div><div class="value">9th to 13th of July of 2019</div>
    </div>
@@ -802,14 +813,12 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- 2018
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-   <span id="6BMSStudConf"></span>
    <br/><div class="cv">
    <div class="year">
    <h4>2018</h4>
    </div><div class="title">
-   <h4>&emsp;<a href="https://bmsstudconf.github.io/2018/index.html">6th BMS Student Conference</a></h4></div>
-     <div class="property">Organizer:</div><div class="value"><a href="#BMSStudRep">2017 BMS Student Representatives</a></div>
-     <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
+   <h4>&emsp;<a href="#6BMSStudConf">6th BMS Student Conference</a></h4></div>
+   <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
      <div class="property">Location:</div><div class="value">Berlin, Germany</div>
      <div class="property">Date:</div><div class="value">21st to 23rd of February of 2018</div>
    </div>
@@ -1197,10 +1206,26 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="ISSAC2020"></span>
+<span id="3rdBYMAT"></span>
 <br/><div class="cv">
 <div class="year">
 <h4>2020</h4>
+</div><div class="title">
+<h4>&emsp;<a href="https://bymat.webs.upv.es/index/">3rd BYMAT Conference</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Ana Navarro Quiles, Eva Primo Tárraga, Clara Burgos Simón, David Martínez Rodríguez, Elena López Navarro, Alberto Espuny Díaz, Miguel Reula Martín, José Alberto Conejero Casares and Patricio Almirón Cuadros</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.uv.es/">Universitat de València</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Politècnica de València</a></div>
+  <div class="property">Location:</div><div class="value">Valencia, Spain (On-line)</div>
+  <div class="property">Date:</div><div class="value">1st to 3rd of December of 2020</div>
+</div>
+
+<!-- 2020
+YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="ISSAC2020"></span>
+<br/><div class="cv">
+<div class="year">
+
 </div><div class="title">
 <h4>&emsp;<a href="http://issac-conference.org/2020/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a></h4></div>
   <div class="property">Organizer:</div><div class="value">	Ioannis Z. Emiris and Lihong Zhi (General Chairs) &ndash; <button onclick="show(1902)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2020org">
@@ -1216,9 +1241,6 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Date:</div><div class="value">20th to 23rd of July of 2020</div>
   <div class="property">Note:</div><div class="value">On-line due to the COVID-19 pandemic</div>
 </div>
-
-<!-- 2020
-YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <span id="milestoneseinstein2020"></span>
 <br/><div class="cv">
@@ -1249,10 +1271,22 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- 2019
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="openingeinstein"></span>
+<span id="ncyprus2019"></span>
 <br/><div class="cv">
 <div class="year">
 <h4>2019</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://web0.boun.edu.tr/alp.bassa/RRAG/">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Alp Bassa, Turgay Bayraktar, Özgür Kişisel, Ferit Öztürk and Josué Tonelli-Cueto</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://ncc.metu.edu.tr/">Middle East Technical University - Northern Cyprus Campus</a></div>
+  <div class="property">Location:</div><div class="value">Güzelyurt, Northern Cyprus</div>
+  <div class="property">Date:</div><div class="value">21st to 26th of October of 2019</div>
+</div>
+
+<span id="openingeinstein"></span>
+<br/><div class="cv">
+<div class="year">
+
 </div><div class="title">
 <h4>&emsp;<a href="http://ehrhart.math.fu-berlin.de/agplus/conference.php">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
   <div class="property">Organizer:</div><div class="value">Mario Kummer, Angela Ortega, Andrea Petracci and Karin Schaller</div>
@@ -1482,6 +1516,18 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.icmat.es/">Instituto de Ciencias Matem&aacute;ticas (ICMAT)</a></div>
      <div class="property">Location:</div><div class="value">Madrid, Spain</div>
      <div class="property">Date:</div><div class="value">7th to 9th of May of 2018</div>
+   </div>
+
+   <span id="6BMSStudConf"></span>
+   <br/><div class="cv">
+   <div class="year">
+
+   </div><div class="title">
+   <h4>&emsp;<a href="https://bmsstudconf.github.io/2018/index.html">6th BMS Student Conference</a></h4></div>
+     <div class="property">Organizer:</div><div class="value"><a href="#BMSStudRep">2017 BMS Student Representatives</a></div>
+     <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
+     <div class="property">Location:</div><div class="value">Berlin, Germany</div>
+     <div class="property">Date:</div><div class="value">21st to 23rd of February of 2018</div>
    </div>
 
 <!-- 2017
