--- a/cv_es.html
+++ b/cv_es.html
@@ -738,6 +738,19 @@
    <h2 class="display-4">Actividades organizadas</h2>
    </div></div>
 
+   <!-- 2020
+   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+   <br/><div class="cv">
+   <div class="year">
+   <h4>2020</h4>
+   </div><div class="title">
+   <h4>&emsp;<a href="#3rdBYMAT">3rd BYMAT Conference</a></h4></div>
+   <div class="pretalktitle"></div><div class="talktitle">Miembro del Comité Científico</div>
+     <div class="property">Location:</div><div class="value">Valencia, España (On-line)</div>
+     <div class="property">Date:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
+   </div>
+
    <!-- 2019
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -749,23 +762,21 @@
    <h4>&emsp;<a href="https://whatisseminar.xyz/">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
    <div class="year"></div><div class="title">
    <h4>&ensp;&emsp;<em>(Seminario &ldquo;¿Qué es...?&rdquo;)</em></h4></div>
+   <div class="pretalktitle"></div><div class="talktitle">Co-organizador, diseñador web y coordinación de los vídeos</div>
      <div class="property">Descripción:</div><div class="value">Seminario organizado por estudiantes donde se una nueva idea, concepto u objeto se introduce en cada sesión</div>
-     <div class="property">Papel:</div><div class="value">Co-organizador, diseñador web y coordinación de los vídeos</div>
      <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
      <div class="property">Fecha:</div><div class="value">De abril del 2016 a diciembre del 2019</div>
    </div>
 
 
-   <span id="ncyprus2019"></span>
    <br/><div class="cv">
    <div class="year">
    <h4>2019</h4>
    </div><div class="title">
-   <h4>&emsp;<a href="http://web0.boun.edu.tr/alp.bassa/RRAG/">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
+   <h4>&emsp;<a href="#ncyprus2019">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
    <div class="year"></div><div class="title">
    <h4>&ensp;&emsp;<em>(Taller de Investigación en Geometría Algebraica Real Aleatoria)</em></h4></div>
-     <div class="property">Organizador:</div><div class="value">Alp Bassa, Turgay Bayraktar, Özgür Kişisel, Ferit Öztürk and Josué Tonelli-Cueto</div>
-     <div class="property">Institución anfitriona:</div><div class="value"><a href="https://ncc.metu.edu.tr/">Middle East Technical University - Northern Cyprus Campus</a></div>
+     <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
      <div class="property">Lugar:</div><div class="value">Güzelyurt, Chipre del Norte</div>
      <div class="property">Fecha:</div><div class="value">del 21 al 26 de octubre del 2019</div>
    </div>
@@ -777,12 +788,12 @@
    </div><div class="title">
    <h4>&emsp;Minisymposium <em>Numerical methods for structured polynomial system solving</em></h4></div>
    <div class="year"></div><div class="title">
-   <h4>&ensp;&emsp;<em>(Minisimposio <em>Métodos numéricos para la resolución de sistemas polinomiales estructurados</em>)</em></h4></div>
+   <h4 style="font-size:1.2em;">&ensp;&emsp;<em>(Minisimposio <em>Métodos numéricos para la resolución de sistemas polinomiales estructurados</em>)</em></h4></div>
    <div class="year"></div><div class="title">
    <h4>&#160;&#160;en la <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a></h4></div>
+   <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
      <div class="property">Descripción:</div><div class="value">4 sesiones y 15 charlas</div>
      <div class="property">Organizador:</div><div class="value">Alperen A. Erg&uuml;r, Pierre Lairez, Gregorio Malajovich y Josu&eacute; Tonelli-Cueto</div>
-     <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.unibe.ch/">University of Bern</a></div>
      <div class="property">Lugar:</div><div class="value">Bern, Suiza</div>
      <div class="property">Fecha:</div><div class="value">Del 9 al 13 de julio del 2019</div>
    </div>
@@ -790,16 +801,14 @@
 <!-- 2018
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-   <span id="6BMSStudConf"></span>
    <br/><div class="cv">
    <div class="year">
    <h4>2018</h4>
    </div><div class="title">
-   <h4>&emsp;<a href="https://bmsstudconf.github.io/2018/index.html">6th BMS Student Conference</a></h4></div>
+   <h4>&emsp;<a href="#6BMSStudConf">6th BMS Student Conference</a></h4></div>
    <div class="year"></div><div class="title">
    <h4>&ensp;&emsp;<em>(6ª Conferencia de Estudiantes de la BMS)</em></h4></div>
-     <div class="property">Organizador:</div><div class="value"><a href="#BMSStudRep">2017 BMS Student Representatives</a></div>
-     <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
+   <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
      <div class="property">Lugar:</div><div class="value">Berlín, Alemania</div>
      <div class="property">Fecha:</div><div class="value">Del 21 al 23 de febrero del 2018</div>
    </div>
@@ -1194,10 +1203,28 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-<span id="ISSAC2020"></span>
+<span id="3rdBYMAT"></span>
 <br/><div class="cv">
 <div class="year">
 <h4>2020</h4>
+</div><div class="title">
+<h4>&emsp;<a href="https://bymat.webs.upv.es/index/">3rd BYMAT Conference</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(3ª Conferencia BYMAT)</em></h4></div>
+  <div class="property">Organizador:</div><div class="value">Ana Navarro Quiles, Eva Primo Tárraga, Clara Burgos Simón, David Martínez Rodríguez, Elena López Navarro, Alberto Espuny Díaz, Miguel Reula Martín, José Alberto Conejero Casares y Patricio Almirón Cuadros</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.uv.es/">Universitat de València</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Politècnica de València</a></div>
+  <div class="property">Lugar:</div><div class="value">Valencia, España (On-line)</div>
+  <div class="property">Fecha:</div><div class="value">1 al 3 de diciembre del 2020</div>
+</div>
+
+<!-- 2020
+YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="ISSAC2020"></span>
+<br/><div class="cv">
+<div class="year">
+
 </div><div class="title">
 <h4>&emsp;<a href="http://issac-conference.org/2020/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a></h4></div>
 <div class="year"></div><div class="title">
@@ -1216,8 +1243,6 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Nota:</div><div class="value">On-line por la pandemia del COVID-19</div>
 </div>
 
-<!-- 2020
-YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <span id="milestoneseinstein2020"></span>
 <br/><div class="cv">
@@ -1227,7 +1252,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <h4>&emsp;<a href="http://ehrhart.math.fu-berlin.de/agplus/milestone.php">Milestones Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
 <div class="year"></div><div class="title">
 <h4>&ensp;&emsp;<em>(Conferencia de Hitos del Semestre Temático Einstein en Geometría Algebraica)</em></h4></div>
-  <div class="property">Organizador:</div><div class="value">Matías Bender and Peter B&uuml;rgisser</div>
+  <div class="property">Organizador:</div><div class="value">Matías Bender y Peter B&uuml;rgisser</div>
   <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
   <div class="property">Lugar:</div><div class="value">Berlin, Alemania</div>
   <div class="property">Fecha:</div><div class="value">del 27 al 28 de febrero del 2020</div>
@@ -1247,6 +1272,20 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <!-- 2019
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="ncyprus2019"></span>
+<br/><div class="cv">
+<div class="year">
+<h4>2019</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://web0.boun.edu.tr/alp.bassa/RRAG/">Research Workshop on Random Real Algebraic Geometry</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(Taller de Investigación en Geometría Algebraic Real Aleatoria)</em></h4></div>
+  <div class="property">Organizador:</div><div class="value">Alp Bassa, Turgay Bayraktar, Özgür Kişisel, Ferit Öztürk y Josué Tonelli-Cueto</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://ncc.metu.edu.tr/">Middle East Technical University - Northern Cyprus Campus</a></div>
+  <div class="property">Lugar:</div><div class="value">Güzelyurt, Chipre del Norte</div>
+  <div class="property">Fecha:</div><div class="value">del 21 al 26 de octubre del 2019</div>
+</div>
 
 <span id="openingeinstein"></span>
 <br/><div class="cv">
@@ -1509,6 +1548,20 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.icmat.es/">Instituto de Ciencias Matem&aacute;ticas (ICMAT)</a></div>
      <div class="property">Lugar:</div><div class="value">Madrid, España</div>
      <div class="property">Fecha:</div><div class="value">del 7 al 9 de mayo del 2018</div>
+   </div>
+
+   <span id="6BMSStudConf"></span>
+   <br/><div class="cv">
+   <div class="year">
+
+   </div><div class="title">
+   <h4>&emsp;<a href="https://bmsstudconf.github.io/2018/index.html">6th BMS Student Conference</a></h4></div>
+   <div class="year"></div><div class="title">
+   <h4>&ensp;&emsp;<em>(6ª Conferencia de Estudiantes de la BMS)</em></h4></div>
+     <div class="property">Organizador:</div><div class="value"><a href="#BMSStudRep">2017 BMS Student Representatives</a></div>
+     <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
+     <div class="property">Lugar:</div><div class="value">Berlín, Alemania</div>
+     <div class="property">Fecha:</div><div class="value">del 21 al 23 de febrero del 2018</div>
    </div>
 
 <!-- 2017
